--- a/css/base.css
+++ b/css/base.css
@@ -40,7 +40,7 @@ h6, .h6,
 .h {
 	font-family: var(--headings-font-family);
 	font-weight: var(--headings-font-weigth);
-	margin: 0 0 10px 0;
+	margin: 0 0 15px 0;
 	color: var(--headings-color);
 	text-transform: none;
 }
@@ -72,6 +72,10 @@ h6, .h6 {
 
 p {
 	margin: 0 0 1em;
+}
+
+p:last-child {
+	margin-bottom: 0;
 }
 
 a {
@@ -112,6 +116,11 @@ img {
   color: var(--btn-background);
 }
 
+ol, ul {
+	padding-left: 18px;
+	margin-top: 0;
+}
+
 /* .input[type='text'],
 input[type='tel'],
 input[type='email'],
@@ -132,22 +141,23 @@ textarea {
 
 /* header styles */
 .header-top {
-	padding: 15px 0;
 	display: flex;
-	flex-direction: row;
-	align-items: flex-start;
 	justify-content: space-between;
+	align-items: flex-start;
+	z-index: 2;
+	padding: 20px 0;
 }
 
 
 .logo-holder {
 	max-width: 446px;
-	width: 60%;
+	width: 65%;
 }
 
 .languages-holder {
 	display: flex;
 	font-weight: 500;
+	margin-bottom: 10px;
 }
 
 .languages-holder .ua-lang,
@@ -163,27 +173,168 @@ textarea {
 .languages-holder .eng-lang:active,
 .languages-holder .eng-lang:focus  {
 	color: var(--base-link-color);
+	text-decoration: none;
 }
 
-.languages-holder .lang-img {
+.ua-lang .lang-img {
 	margin-right: 5px;
 } 
+.lang-img {
+	width: 27px;
+}
 
 .languages-holder .lang-text {
 	display: none;
 }
 
-.ua-lang.active,
-.eng-lang.active {
+.ua-lang.active, .ua-lang.active .underline:before,
+.eng-lang.active, .eng-lang.active .underline:before {
 	color: var(--base-link-color);
-	text-decoration: underline;
+	opacity: 1;
 }
 
 .contact-holder {
 	display: none;
 }
 
+.social-holder {
+	display: none;
+}
 
+.dropdown {
+	display: inline-block;
+}
+
+.dropdown-icon {
+	width: 40px;
+	height: 3px;
+	display: inline-block;
+	position: relative;
+	background-color: var(--blue);
+	margin: 8px 0;
+}
+
+.dropdown-icon:before,
+.dropdown-icon:after {
+	content: "";
+	display: inline-block;
+	position: absolute;
+	width: 100%;
+	height: 3px;
+	background-color: var(--blue);
+	top: -8px;
+}
+
+.dropdown-icon:after {
+	top: 8px;
+}
+
+.navbar {
+	position: relative;
+	text-transform: uppercase;
+}
+
+.navigation {
+	flex-direction: column;
+	padding-left: 0;
+	margin: 0;
+	padding: 10px 15px;
+	z-index: 2;
+	background-color: var(--white);
+	width: 100%;
+	font-weight: 500;
+}
+
+.navigation-item {
+	list-style-type: none;
+	
+}
+
+.navigation-item .navigation-link {
+	padding: 5px 0;
+	margin-bottom: 10px;
+	display: inline-block;
+	color: var(--base-text-color);
+	width: 100%;
+	position: relative;
+}
+
+.navigation-item .navigation-link:hover,
+.navigation-item .navigation-link:active,
+.navigation-item .navigation-link:focus {
+	text-decoration: none;
+	color: var(--blue);
+}
+
+.underline:before {
+	display: inline-block;
+	content: "";
+	width: 100%;
+	height: 1px;
+	position: absolute;
+	bottom: 0;
+	background-color: var(--blue);
+	opacity: 0;
+	transition: var(--animation-speed);
+}
+
+.bg-wrapper.bg-img {
+	top: -5%;
+	right: -3%;
+	z-index: -1;
+	width: 50%;
+}
+
+/* section-hero */
+.section {
+	padding: 25px 0 15px;
+	position: relative;
+}
+
+.hero-list {
+	text-transform: uppercase;
+	color: var(--blue);
+	font-weight: var(--headings-font-weigth);
+	font-size: 20px;
+	margin-top: 0;
+	padding-left: 20px;
+}
+
+.section-hero .bg-img {
+	display: none;
+}
+
+.bg-img {
+	position: absolute;
+}
+
+.section-hero.underline:before {
+	opacity: 1;
+	top: 0;
+	height: 2px;
+}
+
+/* section-about */
+.section-about {
+	padding: 20px 0 25px 15px;
+	font-weight: 500;
+}
+
+.section-about .underline:before {
+	height: calc(100% - 40px);
+	width: 3px;
+	left: 0;
+	opacity: 1;
+	bottom: 50%;
+  transform: translate(50%, 50%);
+}
+
+@media (min-width: 425px) {
+	.hero-list {
+		font-size: 24px;
+		padding-left: 22px;
+	}
+}
 
 @media (min-width: 768px) {
 	h1, .h1 {
@@ -224,15 +375,95 @@ textarea {
 
 	.languages-holder .lang-text {
 		display: block;
+		position: relative;
 	}
-
-	.languages-holder .ua-lang,
-	.languages-holder .eng-lang {
+	.languages-holder .ua-lang {
 		margin-right: 15px;
 	}
+	.eng-lang .lang-img {
+		margin-right: 5px;
+	} 
+
+	.languages-holder .ua-lang:hover .underline:before,
+	.languages-holder .ua-lang:active .underline:before,
+	.languages-holder .ua-lang:focus .underline:before,
+	.languages-holder .eng-lang:hover .underline:before,
+	.languages-holder .eng-lang:active .underline:before,
+	.languages-holder .eng-lang:focus .underline:before {
+		opacity: 1;
+	}
+
+	.section-hero {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	.hero-list {
+		font-size: 30px;
+		z-index: 1;
+		padding-left: 26px;
+	}
+
+	.section-hero .bg-img {
+		display: block;
+		position: absolute;
+		transform: rotate(180deg);
+		z-index: -1;
+	}
+
+	.section-hero .bg-img-1 {
+		width: 65px;
+		top: 10%;
+    left: 40%;
+	}
+	
+	.section-hero .bg-img-2 {
+		width: 65px;
+		top: 70%;
+    left: 10%;
+	}
+	
+	.section-hero .bg-img-3 {
+		width: 30px;
+		top: 67%;
+    left: 34%;
+	}
+	
+	.section-about {
+		padding: 25px 30px;
+	}
+
+	.section-about .underline:before {
+		height: calc(100% - 50px);
+	}
+	
 }
 
 @media (min-width: 1024px) {
+	.bg-wrapper.bg-img {
+		width: 40%;
+	}
+
+	.social-holder {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.social-holder a {
+		display: block;
+	}
+	
+	.social-holder .social-link {
+		width: 44px;
+		margin-bottom: 10px;
+	}
+
+
+	.social-holder .social-link:last-child {
+		margin-bottom: 0;
+	}
+
 	.contact-holder {
 		display: block;
 		font-weight: 500;
@@ -240,10 +471,13 @@ textarea {
 		margin: 0;
 		padding: 0;
 		text-align: right;
+		text-decoration: none;
+		font-size: 17px;
 	}
 
 	.contact-holder a {
 		color: var(--base-text-color);
+		position: relative;
 	}
 
 	.contact-holder a:hover,
@@ -253,9 +487,67 @@ textarea {
 	.contact-holder a:active,
 	.contact-holder a:focus  {
 		color: var(--base-link-color);
+		text-decoration: none;
 	}
 
-	.header-top {
-		justify-content: space-around;
+	.contact-holder a:hover.underline:before,
+	.contact-holder a:active.underline:before,
+	.contact-holder a:focus.underline:before,
+	.contact-holder a:hover.underline:before,
+	.contact-holder a:active.underline:before,
+	.contact-holder a:focus.underline:before {
+		opacity: 1;
+	}
+
+	.navigation {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		background-color: transparent;
+		box-shadow: none;
+		position: relative;
+		padding: 10px 0 15px;
+	}
+
+	.dropdown {
+		display: none;
+	}
+	
+	.navigation-item .navigation-link {
+		padding: 5px 8px;
+		width: auto;
+	}
+	
+	.languages-holder .eng-lang {
+		margin-right: 15px;
+	}
+
+	.hero-list {
+		font-size: 36px;
+		padding-left: 30px;
+	}
+
+	.section-hero .bg-img-1 {
+		width: 88px;
+		left: 35%;
+	}
+	
+	.section-hero .bg-img-2 {
+		width: 88px;
+		bottom: 0;
+		top: auto;
+		left: 7%;
+	}
+	
+	.section-hero .bg-img-3 {
+		width: 42px;
+		top: 68%;
+		left: 25%;
+	}
+}
+
+@media (min-width: 1200px) {
+	.navigation {
+		font-size: var(--h3-font-size);
 	}
 }
