--- a/css/base.css
+++ b/css/base.css
@@ -630,472 +630,112 @@ textarea {
 	text-decoration: none;
 }
 
-@media (min-width: 425px) {
-	.hero-list {
-		font-size: 24px;
-		padding-left: 22px;
-	}
-}
+/* card-people */
 
-@media (min-width: 768px) {
-	h1, .h1 {
-		font-size: 36px;
-	}
-	
-	h2, .h2 {
-		font-size: 22px;
-	}
-	
-	h3, .h3 {
-		font-size: 20px;
-	}
-	
-	h4, .h4 {
-		font-size: 18px;
-	}
-	
-	h5, .h5 {
-		font-size: 16px;
-	}
-	
-	h6, .h6 {
-		font-size: 14px;
-	}
-
-	.btn {
-		padding: 18px 20px;
-		width: fit-content;
-	}
-
-	.header-top {
-		padding: 30px 0;
-	}
-
-	.container {
-		padding: 0 40px;
-	}
-
-	.logo-holder {
-		width: 40%;
-	}
-
-	.languages-holder .lang-text {
-		display: block;
-		position: relative;
-	}
-	.languages-holder .ua-lang {
-		margin-right: 15px;
-	}
-	.eng-lang .lang-img {
-		margin-right: 5px;
-	} 
-
-	.languages-holder .ua-lang:hover .underline:before,
-	.languages-holder .ua-lang:active .underline:before,
-	.languages-holder .ua-lang:focus .underline:before,
-	.languages-holder .eng-lang:hover .underline:before,
-	.languages-holder .eng-lang:active .underline:before,
-	.languages-holder .eng-lang:focus .underline:before {
-		opacity: 1;
-	}
-
-	.dropdown {
-		bottom: 30px;
-	}
-
-	.bg-page.bg-img {
-		top: -30px;
-		right: -50px;
-	}
-
-	.section-hero {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-
-	.hero-list {
-		font-size: 30px;
-		z-index: 1;
-		padding-left: 26px;
-	}
-
-	.section-hero .bg-img {
-		display: block;
-		position: absolute;
-		transform: rotate(180deg);
-		z-index: -1;
-	}
-
-	.section-hero .bg-img-1 {
-		width: 65px;
-		top: 10%;
-    left: 40%;
-	}
-	
-	.section-hero .bg-img-2 {
-		width: 65px;
-		top: 70%;
-    left: 10%;
-	}
-	
-	.section-hero .bg-img-3 {
-		width: 30px;
-		top: 67%;
-    left: 34%;
-	}
-	
-	.section-about {
-		padding: 25px 30px;
-	}
-
-	.section-about .underline-left:before {
-		height: calc(100% - 50px);
-	}
-
-	.card-technology {
-		width: 50%;
-		padding: 20px 15px;
-	}
-
-	.card-technology .card-title {
-		margin-bottom: 30px;
-	}
-	
-	.card-technology .card-img {
-		margin: 0 auto 30px;
-	}
-	
-	.card-technology .card-content{
-		margin-bottom: 30px;
-	}
-
-	.technology-modal .uk-modal-body {
-		padding: 25px 30px;
-		border-radius: 0 0 30px 30px;
-	}
-
-	.olc-modal .img-holder {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-	}
-
-	.olc-modal .card-img {
-		margin: 0 10px 10px 0;
-	}
-	
-	.section-gallery {
-		display: block;
-	}
-
-	.section-gallery .uk-dotnav {
-		position: absolute;
-		bottom: 40px;
-		right: 50%;
-		transform: translate(50%, 50%);
-	}
-	
-	.section-gallery .uk-dotnav>*>* {
-		width: 15px;
-		height: 15px;
-		background: #ebe7eb;
-		border: 1px solid var(--white);
-	}
-	
-	.section-gallery .uk-dotnav .uk-active>* {
-		background-color: var(--blue);
-		border-color: transparent;
-	}
-	
-	.uk-dotnav>*>:focus, .uk-dotnav>*>:hover {
-		background-color: var(--blue);
-		outline: none;
-	}
-
-	.section-gallery .gallery-arrow {
-		left: 20px;
-		z-index: 1;
-		width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    display: flex;
-    border: 3px solid white;
-    justify-content: center;
-    align-items: center;
-	}
-
-	.section-gallery .gallery-arrow:hover, 
-	.section-gallery .gallery-arrow:active,
-	.section-gallery .gallery-arrow:focus {
-		border-color: var(--blue);
-	}
-
-	.section-gallery .gallery-arrow:hover .arrow, 
-	.section-gallery .gallery-arrow:active .arrow,
-	.section-gallery .gallery-arrow:focus .arrow {
-		border-color: var(--blue);
-		transition: var(--animation-speed);
-	}
-
-	.section-gallery .gallery-arrow .arrow {
-		display: inline-block;
-		width: 20px;
-		height: 20px;
-		border-left: 3px solid var(--white);
-		border-top: 3px solid var(--white);
-		transform: rotate(-45deg) translate(2px, 2px);
-	}
-
-	.section-gallery .uk-position-center-right-out {
-		right: 20px;
-		left: auto;
-	}
-
-	.section-gallery .uk-position-center-right-out .arrow {
-		transform: rotate(130deg) translate(2px, 2px);
-	}
-
-	.footer {
-		padding: 40px 0;
-	}
-
-	.footer .footer-top {
-		flex-direction: row;
-		margin-bottom: 40px;
-	}
-
-	.footer .contact-holder {
-		margin-bottom: 0;
-		padding-right: 20px;
-	}
-
-	.footer .logo-holder {
-		margin: 0 20px 0 0;
-	}
-
-	.footer .contact-item a {
-		display: inline-block;
-	}
-
-	.footer-bottom {
-		text-align: left;
-		font-size: 17px;
-	}
-
-}
-
-@media (min-width: 1024px) {
-	.bg-page.bg-img {
-		width: 40%;
-		top: -45px;
-		right: -40px;
-	}
-
-	.social-holder {
-		display: flex;
-		flex-direction: column;
-	}
-
-	.social-holder a {
-		display: block;
-	}
-
-	.social-holder .social-link:last-child {
-		margin-bottom: 0;
-	}
-
-	.contact-holder {
-		display: block;
-		margin-right: 20px;
-	}
-
-	.navigation {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		background-color: transparent;
-		box-shadow: none;
-		position: relative;
-		position: relative;
-		padding: 0;
-		box-shadow: none;
-	}
-
-	.navigation[hidden] {
-    display: flex!important;
-}
-
-.navigation .submenu {
-	position: absolute;
-	background-color: var(--white);
-	padding: 15px 15px 5px;
+.card-people {
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.18);
+	background-color: var(--white);
+	box-sizing: border-box;
+	margin: 0 0 10px 0;
+	padding: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: relative;
 }
 
-	.dropdown {
-		display: none;
-	}
-	
-	.navigation-item .navigation-link {
-		padding: 10px 5px 20px;
-		width: auto;
-	}
-
-	.navigation-item {
-		margin: 0 -5px;
-	}
-	
-	.languages-holder {
-		margin-right: 20px;
-	}
-
-	.languages-holder .eng-lang {
-		margin-right: 15px;
-	}
-
-	.hero-list {
-		font-size: 36px;
-		padding-left: 30px;
-	}
-
-	.section-hero .bg-img-1 {
-		width: 88px;
-		left: 35%;
-	}
-	
-	.section-hero .bg-img-2 {
-		width: 88px;
-		bottom: 0;
-		top: auto;
-		left: 7%;
-	}
-	
-	.section-hero .bg-img-3 {
-		width: 42px;
-		top: 68%;
-		left: 25%;
-	}
-
-	.technology-modal .uk-modal-close-outside {
-		right: 20px;
-	}
-
-	.card-technology {
-		padding: 25px 30px;
-		margin-bottom: 20px;
-	}
-
-	.card-technology .card-content {
-		margin-bottom: 50px;
-	}
-
-	.technology-modal .uk-modal-body {
-		padding: 20px 30px;
-	}
-
-	.technology-modal .modal-body {
-		display: flex;
-		flex-wrap: wrap;
-	}
-
-	.technology-modal .card-modal {
-		width: calc(50% - 10px);
-		margin: 0 10px 10px 0;
-	}
-
-	.technology-modal .uk-modal-dialog {
-		width: 80%;
-	}
-
-	.technology-modal .uk-modal-close-outside:hover {
-		background-color: var(--blue);
-	}
-
-	.olc-modal .card-modal {
-		width: 100%;
-	}
-
-	.olc-modal .card-img {
-		width: calc(50% - 10px);
-	}
-
-	.olc-modal .card-img-width {
-		max-width: 516px;
-		width: calc(100% - 10px);
-	}
-
-	.footer .contact-holder {
-		padding-left: 30px;
-		font-size: 20px;
-	}
-
-	.footer .bg-img.bg-img-2 {
-		top: auto;
-		bottom: -800px;
-		transform: rotate(-166deg);
-		left: -100px;
-		width: 1550px;
-	}
+.card-people .card-img {
+	width: 124px;
+	height: 150px;
+	margin-bottom: 10px;
+	/* margin-right: 10px; */
 }
 
-@media (min-width: 1142px) {
-	.olc-modal .card-modal .card-text {
-    width: 100%; 
-		margin-left: 0;
-	}
-
-	.olc-modal .modal-body {
-		flex-wrap: nowrap;
-	}
-
-	.olc-modal .card-img img {
-		height: 233px;
-		object-fit: contain;
-	}
-
-	.navbar .navigation .navigation-link {
-		font-size: 18px;
-	}
+.card-people .card-img img{
+	height: 100%;
+	object-fit: cover;
+	width: 100%;
 }
 
-@media (min-width: 1200px) {
-	.navigation {
-		font-size: var(--h3-font-size);
-	}
-
-	/* .technology-modal .modal-body {
-		overflow: hidden;
-	} */
-
-	.technology-modal .uk-modal-dialog {
-		width: 1110px;
-	}
-
-	.technology-modal .card-modal {
-		display: flex;
-	}
-
-	.technology-modal .card-modal .card-text {
-		width: 50%;
-		margin-left: 10px;
-	}
-	.olc-modal .card-modal .card-text {
-    width: 100%; 
-		margin-left: 0;
-	}
-	
+.card-people .people-status {
+	color: var(--blue);
+	font-weight: 500;
+	margin-bottom: 3px;
 }
 
-/* @media (min-width: 1500px) {
-	.footer .bg-img.bg-img-2 {
-		left: 100px;
-	}
+.card-people .people-name {
+	text-transform: uppercase;
+	font-weight: 700;
+	margin-bottom: 15px;
 }
 
-@media (min-width: 2100px) {
-	.footer .bg-img.bg-img-2 {
-		left: 400px;
-	}
-} */
+.card-people .card-text {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+}
 
+.card-people .tel-list, 
+.card-people .mail-list {
+	padding-left: 42px;
+	position: relative;
+	margin-bottom: 10px;
+} 
+
+.card-people .tel-list li, 
+.card-people .mail-list li {
+	margin-bottom: 0;
+}
+
+.card-people .tel-list:before, 
+.card-people .mail-list:before {
+	content: "";
+	width: 28px;
+	height: 28px;
+	background-image: url("../images/phone.svg");
+	background-size: cover;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+.card-people .mail-list:before {
+	width: 29px;
+	height: 23px;
+	background-image: url("../images/email.svg");
+}
+
+.card-people .peole-contact-holder {
+	position: absolute;
+	background-color: var(--blue);
+	padding: 12px;
+	z-index: 1;
+	border-radius: 0 0 15px 15px;
+	left: 0;
+	right: 0;
+}
+
+.card-people .peole-contact-holder a {
+	color: var(--white);
+}
+
+.card-people .people-contact-link {
+	position: relative;
+	padding-right: 20px;
+}
+
+.card-people .people-contact-link::before {
+	position: absolute;
+	content: "";
+	width: 10px;
+	height: 10px;
+	background-image: url("../images/open.svg");
+	top: 6px;
+	right: 0;
+	z-index: 1;
+}
+
+.card-people .peole-contact-holder li {
+	list-style: none;
+}
