--- a/css/media-425.css
+++ b/css/media-425.css
@@ -3,4 +3,18 @@
 		font-size: 24px;
 		padding-left: 22px;
 	}
+
+	.quantity-people-department {
+		flex-direction: row;
+		
+	}
+
+	.quantity-people-department .text-info {
+		width: calc(100% - 65px);
+		padding-left: 15px;
+	}
+
+	.quantity-people-department .img-holder {
+		margin-bottom: 0;
+	}
 }
