--- a/css/base.css
+++ b/css/base.css
@@ -870,3 +870,118 @@ textarea {
 .text-transform-uppercase {
 	text-transform: uppercase;
 }
+
+.section-contacts .contact-item {
+	padding: 10px 10px 10px 70px;
+	margin-bottom: 20px;
+	position: relative;
+}
+
+.section-contacts .contact-item:last-child {
+	margin-bottom: 0;
+}
+
+.section-contacts .contact-item:before {
+	content: "";
+	width: 43px;
+	height: 57px;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	background: url(../images/pin.svg) no-repeat;
+	background-size: cover;
+	background-position-x: center;
+	transform: translate(0, -50%);
+}
+
+.section-contacts  .reception-director:before {
+	background: url(../images/meeting.svg) no-repeat;
+	width: 57px;
+}
+
+.section-contacts  .office-contacts:before {
+	background: url(../images/official-documents.svg) no-repeat;
+	width: 55px;
+	height: 55px;
+}
+
+.section-contacts  .human-resources-department-contacts:before {
+	background: url(../images/004-hr.svg) no-repeat;
+	width: 55px;
+	height: 56px;
+}
+
+.section-contacts  h5 {
+	margin-bottom: 0;
+}
+
+.section-contacts .contacts-holder {
+	display: flex;
+	flex-direction: column;
+}
+
+.section-contacts a {
+	color: var(--base-text-color);
+	display: block;
+}
+
+.section-contacts a:hover,
+.section-contacts a:active,
+.section-contacts a:focus {
+	color: var(--blue);
+	text-decoration: none;
+}
+
+.contacts-holder .contacts-list {
+	margin-bottom: 20px;
+}
+
+.map-holder .map {
+	display: block;
+	width: 100%;
+	height: 280px;
+	background: url("../images/map.jpg") no-repeat;
+	background-size: cover;
+	background-position: center;
+	border: 1px solid var(--blue);
+}
+
+.map-holder {
+	width: 100%;
+	overflow: hidden;
+	padding: 10px 0 0 10px;
+}
+
+.card-article {
+	width: 100%;
+	text-align: center;
+	margin-bottom: 20px;
+	/* box-shadow: 0 0 10px rgb(0 0 0 / 18%); */
+}
+
+.card-article .card-img {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+
+.card-article .card-img img {
+	width: 100%;
+	height: auto;
+	max-width: 370px;
+}
+
+.card-article .card-text {
+	padding: 15px 10px;
+}
+
+.section-std .article-card-holder {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+
+.width2x img, .width3x img {
+	margin-bottom: 15px;
+}
