--- a/css/media-768.css
+++ b/css/media-768.css
@@ -287,4 +287,48 @@
 		font-size: 18px;
 	}
 
+	.map-holder {
+		width: 55%;
+		height: auto;
+	}
+
+	.section-contacts .contacts-holder {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
+	.contacts-holder .contacts-list {
+		margin-bottom: 0;
+	}
+
+	.section-std .article-card-holder {
+		justify-content: space-between;
+	}
+
+	.card-article {
+		width: calc(50% - 10px);
+	}
+
+	.card-article:only-of-type {
+		width: 100%;
+	}
+
+	.width2x, .width3x {
+		width: 100%;	
+	}
+
+	.width2x .card-img, .width3x .card-img {
+		flex-direction: row;
+		margin: 0 -5px;
+	}
+	
+	.width2x .card-img img{
+		width: 50%;
+		padding: 0 5px;
+	}
+
+	.width3x .card-img img {
+		width: 33.3%;
+		padding: 0 5px;
+	}
 }
