--- a/css/media-1024.css
+++ b/css/media-1024.css
@@ -177,4 +177,17 @@
 	.card-article:only-of-type {
 		width: 50%;
 	}
+
+	.card-news {
+		flex-direction: column;
+		width: calc(50% - 10px);
+		justify-content: space-between;
+	}
+
+	.card-news .card-text {
+		width: 100%;
+		padding-left: 0;
+		justify-content: space-between;
+		height: calc(100% - 358px);
+	}
 }
