fix btn and navbar

--- a/css/media-768.css
+++ b/css/media-768.css
@@ -228,6 +228,11 @@
 
 	.section-gallery .uk-slider-items li {
 		list-style: none;
+		margin: 0;
+	}
+
+	.section-gallery .uk-slider-items li img {
+		width: 100%;
 	}
 
 	.footer {
