--- a/css/base.css
+++ b/css/base.css
@@ -134,6 +134,7 @@ a:focus {
 	transition: var(--animation-speed);
 	display: inline-block;
 	text-transform: uppercase;
+	width: 100%;
 	min-width: 170px;
 	text-align: center;
 }
